Add Firebase real-time database for instant content updates

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <!-- Link ke CSS External -->
     <link rel="stylesheet" href="style.css">
     
+    <!-- Firebase SDK (untuk real-time database) -->
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database.js"></script>
+    
     <script>
         tailwind.config = {
             theme: {
@@ -574,7 +578,11 @@
     <!-- Toast Container -->
     <div id="toast-container"></div>
 
-    <!-- JAVASCRIPT LOGIC - Link ke File External -->
+    <!-- Scripts -->
+    <script src="firebase-config.js"></script>
+    <script src="script.js"></script>
+</body>
+</html>    <!-- JAVASCRIPT LOGIC - Link ke File External -->
     <script src="script.js"></script>
 </body>
 </html>
