--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Resmi Desa Sejahtera - KKN 2026</title>
+    <title>Website Desa Rulung Sari</title>
     <!-- Menggunakan Tailwind CSS untuk Desain Estetik -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Font Awesome untuk Ikon -->
